[gd_scene load_steps=7 format=3 uid="uid://b0s2dmndrj7t7"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_fmbi4"]
[ext_resource type="Script" path="res://scripts/menus/stats_panel/move_list_panel/move_details_panel.gd" id="2_kuf31"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_bhs4n"]
[ext_resource type="Theme" uid="uid://d2qqyhri84552" path="res://themes/nested_ui/larger_text_panel_theme.tres" id="3_yyfev"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="5_nhktq"]
[ext_resource type="PackedScene" uid="uid://c6tae2tdspbmf" path="res://prefabs/ui/stats/move_effect_details_panel.tscn" id="6_1bvf3"]

[node name="MoveDetailsPanel" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("1_fmbi4")
script = ExtResource("2_kuf31")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_left = 40.0
offset_right = 1240.0
offset_bottom = 720.0
theme = ExtResource("3_yyfev")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 115.0
offset_right = -16.0
offset_bottom = 665.0
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ChargeEffectDetailsPanel" parent="Panel/HBoxContainer" instance=ExtResource("6_1bvf3")]
layout_mode = 2

[node name="TooltipPanel" parent="Panel/HBoxContainer/ChargeEffectDetailsPanel" index="3"]
offset_left = -96.0
offset_top = -257.0
offset_right = 644.0
offset_bottom = 153.0

[node name="SurgeEffectDetailsPanel" parent="Panel/HBoxContainer" instance=ExtResource("6_1bvf3")]
layout_mode = 2
isSurgeEffect = true

[node name="TooltipPanel" parent="Panel/HBoxContainer/SurgeEffectDetailsPanel" index="3"]
offset_left = -644.0
offset_top = -247.0
offset_right = 96.0
offset_bottom = 143.0

[node name="MoveName" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 51.0
grow_horizontal = 2
theme = ExtResource("3_bhs4n")
bbcode_enabled = true
text = "[center]Move Name Goes Here[/center]"
fit_content = true

[node name="DamageCategory" type="RichTextLabel" parent="Panel"]
layout_mode = 1
offset_left = 24.0
offset_top = 9.0
offset_right = 315.0
offset_bottom = 40.0
text = "Lightning/Physical"
fit_content = true

[node name="RequiredLv" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -318.0
offset_top = 8.0
offset_right = -24.0
offset_bottom = 42.0
grow_horizontal = 0
bbcode_enabled = true
text = "[right]Required Level: 100[/right]"
fit_content = true

[node name="MoveDescription" type="RichTextLabel" parent="Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 55.0
offset_right = -24.0
offset_bottom = -609.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
text = "This is the description for this move. It should be a short description, to get the general idea, but the effects will be described below."

[node name="BackButton" parent="Panel" instance=ExtResource("5_nhktq")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -53.0
offset_right = 40.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
text = "Back"

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]

[editable path="Panel/HBoxContainer/ChargeEffectDetailsPanel"]
[editable path="Panel/HBoxContainer/SurgeEffectDetailsPanel"]
